<?xml version="1.0"?>
<package format="3">
  <name>demo_ros2_cpp</name>
  <version>0.0.1</version>
  <description>Demo ROS 2 C++ package for CodexAITest</description>

  <maintainer email="dev@example.com">CodexAITest Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
